# SimpleSocialNetwork

./: .md  Dockerfile  README.md  docker-compose.yaml  postman_collection.json  pyproject.toml
src/: main.py
src/authentication/: api.py  controller.py  user_schemas.py
src/core/: settings.py
src/db/: connector.py
src/jwt_token/: jwt_token.py
src/social_page/: api.py  controller.py  router.py  schemas.py  social_page_schemas.py
tests/: conftest.py
tests/api/: test_get_id.py  test_login.py  test_register.py
tests/fixtures/: prepare_social.py  test_db.py
tests/high_load/: test_head_load.py
